samples/_failures_safe/1761181382_3ee377_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9978331.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_a9978331.c:148:23: error: expected ‘;’ at end of input
  148 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_a9978331.c:148:17: error: expected declaration or statement at end of input
  148 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_a9978331.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9978331.c:148:17: error: expected declaration or statement at end of input
